[package]
name = "rett"
version = "0.1.0"
authors = ["François Gindraud <francois.gindraud@gmail.com>"]
description = "Tool to store, manipulate and display relational information"

[dependencies]
maud = "0.21.0"
percent-encoding = "1"
hyper = "0.12.30"

[dependencies.clap]
version = "2"
default-features = false

[dependencies.tokio]
version = "^0.1.14" # Version from hyper
default-features = false
features = ["rt-full"]

[dependencies.signal-hook]
version = "^0.1.9" # Version from hyper
features = ["tokio-support"]
